WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
107957
[BlackBerry] Pop-up WebViews should not take ownership of the backing store.
https://bugs.webkit.org/show_bug.cgi?id=107957
Summary
[BlackBerry] Pop-up WebViews should not take ownership of the backing store.
Andrew Lo
Reported
2013-01-25 09:40:37 PST
WebViews that are set as pop-up WebViews should not take ownership of the backing store. Need a web setting to enable/disable that.
Attachments
Patch
(6.78 KB, patch)
2013-01-25 09:47 PST
,
Andrew Lo
no flags
Details
Formatted Diff
Diff
Patch
(6.96 KB, patch)
2013-01-25 10:41 PST
,
Andrew Lo
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Andrew Lo
Comment 1
2013-01-25 09:47:42 PST
Created
attachment 184765
[details]
Patch
Rob Buis
Comment 2
2013-01-25 09:50:34 PST
Comment on
attachment 184765
[details]
Patch LGTM.
WebKit Review Bot
Comment 3
2013-01-25 09:53:10 PST
Comment on
attachment 184765
[details]
Patch Rejecting
attachment 184765
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=gce-cq-02', 'apply-attachment', '--no-update', '--non-interactive', 184765, '--port=chromium-xvfb']" exit_code: 2 cwd: /mnt/git/webkit-commit-queue Last 500 characters of output: urce/WebKit/blackberry/Api/WebSettings.h patching file Source/WebKit/blackberry/WebCoreSupport/PagePopupBlackBerry.cpp Hunk #1 FAILED at 39. Hunk #2 succeeded at 52 (offset 1 line). Hunk #3 succeeded at 67 (offset 1 line). 1 out of 3 hunks FAILED -- saving rejects to file Source/WebKit/blackberry/WebCoreSupport/PagePopupBlackBerry.cpp.rej Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', '--force', '--reviewer', 'Rob Buis']" exit_code: 1 cwd: /mnt/git/webkit-commit-queue Full output:
http://queues.webkit.org/results/16121440
Andrew Lo
Comment 4
2013-01-25 10:41:57 PST
Created
attachment 184774
[details]
Patch
Rob Buis
Comment 5
2013-01-25 10:45:52 PST
Comment on
attachment 184774
[details]
Patch Ok.
WebKit Review Bot
Comment 6
2013-01-25 11:02:07 PST
Comment on
attachment 184774
[details]
Patch Clearing flags on attachment: 184774 Committed
r140849
: <
http://trac.webkit.org/changeset/140849
>
WebKit Review Bot
Comment 7
2013-01-25 11:02:11 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug