[BlackBerry] Pop-up WebViews should not take ownership of the backing store. https://bugs.webkit.org/show_bug.cgi?id=107957

Patch by Andrew Lo <anlo@rim.com> on 2013-01-25
Reviewed by Rob Buis.
Internally reviewed by Jakob Petsovits.

Internal PR 274581.
Add web setting for whether a WebPage should take the backing store.
Prevent pop-up WebView from taking ownership of the backing
store when it becomes visible.

* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPage::setVisible):
* Api/WebSettings.cpp:
(WebKit):
(BlackBerry::WebKit::WebSettings::standardSettings):
(BlackBerry::WebKit::WebSettings::isBackingStoreEnabled):
(BlackBerry::WebKit::WebSettings::setBackingStoreEnabled):
* Api/WebSettings.h:
* WebCoreSupport/PagePopupBlackBerry.cpp:
(WebCore::PagePopupBlackBerry::PagePopupBlackBerry):
(WebCore::PagePopupBlackBerry::init):

Canonical link: https://commits.webkit.org/126164@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140849 268f45cc-cd09-0410-ab3c-d52691b4dbfc