Source/WebKit/blackberry/Api/WebPage.cpp
@@ -3260,6 +3260,16 @@ void WebPage::setVisible(bool visible)
     d->resumeRootLayerCommit();
 #endif
 
+    // We want to become visible but not get backing store ownership.
+    if (d->m_backingStore->d->isOpenGLCompositing() && !d->m_webSettings->isBackingStoreEnabled()) {
+        d->setCompositorDrawsRootLayer(true);
+#if USE(ACCELERATED_COMPOSITING)
+        d->setNeedsOneShotDrawingSynchronization();
+#endif
+        d->setShouldResetTilesWhenShown(true);
+        return;
+    }
+
     // Push this WebPage to the top of the visible pages list.
     if (!visibleWebPages()->isEmpty() && visibleWebPages()->last() != this) {
         size_t foundIndex = visibleWebPages()->find(this);
