Source/WebKit/blackberry/Api/WebSettings.cpp
@@ -61,7 +61,8 @@ DEFINE_STATIC_LOCAL(String, BlackBerryZoomToFitOnLoadEnabled, (ASCIILiteral("Bla
 DEFINE_STATIC_LOCAL(String, BlackBerryFullScreenVideoCapable, (ASCIILiteral("BlackBerryFullScreenVideoCapable")));
 DEFINE_STATIC_LOCAL(String, BlackBerryCredentialAutofillEnabled, (ASCIILiteral("BlackBerryCredentialAutofillEnabled")));
 DEFINE_STATIC_LOCAL(String, BlackBerryFormAutofillEnabled, (ASCIILiteral("BlackBerryFormAutofillEnabled")));
-DEFINE_STATIC_LOCAL(String, BlackBerryDevicePixelRatio, (ASCCIILiteral("BlackBerryDevicePixelRatio")));
+DEFINE_STATIC_LOCAL(String, BlackBerryDevicePixelRatio, (ASCIILiteral("BlackBerryDevicePixelRatio")));
+DEFINE_STATIC_LOCAL(String, BlackBerryBackingStoreEnabled, (ASCIILiteral("BlackBerryBackingStoreEnabled")));
 DEFINE_STATIC_LOCAL(String, SpatialNavigationEnabled, (ASCIILiteral("SpatialNavigationEnabled")));
 DEFINE_STATIC_LOCAL(String, WebKitDatabasePath, (ASCIILiteral("WebKitDatabasePath")));
 DEFINE_STATIC_LOCAL(String, WebKitDatabasesEnabled, (ASCIILiteral("WebKitDatabasesEnabled")));
@@ -161,6 +162,7 @@ WebSettings* WebSettings::standardSettings()
     settings->m_private->setBoolean(BlackBerryAllowCrossSiteRequests, false);
     settings->m_private->setUnsigned(BlackBerryBackgroundColor, WebCore::Color::white);
     settings->m_private->setBoolean(BlackBerryCookiesEnabled, true);
+    settings->m_private->setBoolean(BlackBerryBackingStoreEnabled, true);
     settings->m_private->setDouble(BlackBerryInitialScale, -1);
     settings->m_private->setUnsigned(BlackBerryMaxPluginInstances, 1);
     settings->m_private->setUnsigned(BlackBerryOverScrollColor, WebCore::Color::white);
@@ -748,6 +750,16 @@ bool WebSettings::isDirectRenderingToWindowEnabled() const
 void WebSettings::setDirectRenderingToWindowEnabled(bool enable)
 {
     m_private->setBoolean(BlackBerryDirectRenderingToWindowEnabled, enable);
+}
+
+bool WebSettings::isBackingStoreEnabled() const
+{
+    return m_private->getBoolean(BlackBerryBackingStoreEnabled);
+}
+
+void WebSettings::setBackingStoreEnabled(bool enable)
+{
+    m_private->setBoolean(BlackBerryBackingStoreEnabled, enable);
 }
 
 unsigned WebSettings::maxPluginInstances() const
