Source/WebKit/blackberry/Api/WebSettings.h
@@ -241,6 +241,9 @@ public:
     double devicePixelRatio() const;
     void setDevicePixelRatio(double);
 
+    bool isBackingStoreEnabled() const;
+    void setBackingStoreEnabled(bool);
+
 private:
     WebSettingsPrivate* m_private;
     WebSettings();
